@@ -2,6 +2,7 @@
   * Minor Enhancements
     * Only store log lines when a client wishes to see them
     * Add an lsb-compliant init script into god/init [Woody Peterson]
+    * Never require stop command; use default killer if none is specified
   * Bug Fixes
     * Fix redefinition error for time.h and allow it to compile on Ubuntu Edgy [github.com/tbuser]
     * Fix a memory leak in jabber by adding a call to jabber_client.close [github.com/woahdae]
